# gw4-isambard-3-practical-workshop-2026

./: .gitignore  AGENTS.md  LICENSE  MAINTAINER.md  README.md  TODO.md  environment.yml  environment_hpc.yml  pyproject.toml
.github/workflows/: docs.yml  live-linkcheck.yml  quality.yml
bootstrap/: README.md
bootstrap/dotfiles/: .bashrc  .zshrc  makefile
bootstrap/install/: README.md  bootstrap.sh  mamba-env.sh
bootstrap/install/src/lib/: mamba-env.sh
bootstrap/install/src/lib/util/: ssh.sh
src/: .gitignore  README.md  makefile
src/01-welcome-login-overview/: 01-system-overview.md  02-storage-worksheet.md  README.md
src/02-login-checkpoint-first-commands/: 01-first-commands.md  02-storage-check.md  03-modules-basics.md  README.md
src/03-first-batch-job-slurm/: 01-hello-world.md  02-multi-task.md  README.md  hello_world.slurm  multi_task.slurm
src/05-installing-software/: 01-modules-first.md  02-conda-environment.md  03-containers-follow-up.md  README.md  check_scipy.py  run_python_env_check.slurm
src/06-python-example-array-jobs-parallelism-strategies/: 01-mpi-parallelism-stretch.md  02-monte-carlo-pi-parallel-strategies.md  README.md  hybrid-MPI.md  monte_carlo_pi_common.py  monte_carlo_pi_mpi_hybrid.py  monte_carlo_pi_numba.py  monte_carlo_pi_numba_parallel.py  monte_carlo_pi_numpy.py  monte_carlo_pi_parallel_strategies.py  monte_carlo_pi_pure_python.py  pixi.toml
src/assets/: makefile  template.markdown  theme.css
src/section_01_welcome_login_overview/: 00-pre-session-email.md  00-pre-session.markdown  01-system-overview.markdown  01-system-overview.md  02-grace-cpu-superchip.markdown  02-grace-cpu-superchip.md  02-storage-worksheet.md  Grace-CPU-Superchip.markdown  Grace-CPU-Superchip.md  README.md
src/section_02_login_checkpoint_first_commands/: 01-first-commands.md  01-login-first-commands.markdown  02-storage-check.md  03-modules-basics.md  README.md
src/section_03_first_batch_job_slurm/: 01-hello-world.md  02-multi-task.md  03-interactive.md  03-sysinfo.md  04-interactive.md  04-matmul.md  05-matmul.md  README.md  first_batch_job_slurm.markdown  hello_world.sh  makefile  matmul.c  matmul.sh  multi_task.sh  sysinfo.sh
src/section_03_first_batch_job_slurm/ex01_hello_world/: 01-hello-world.md  makefile  sbatch_hello_world.sh
src/section_03_first_batch_job_slurm/ex02_multi_task/: 02-multi-task.md  sbatch_multi_task.sh
src/section_03_first_batch_job_slurm/ex03_interactive/: 03-interactive.md
src/section_03_first_batch_job_slurm/ex04_matmul/: .gitignore  04-matmul.md  make.sh  makefile  matmul.c  matmul.sh  matmul_dgemm.c  matmul_naive.c  matmul_naive_flt.c  matmul_sgemm.c  sbatch_matmul.sh
src/section_04_installing_software/: 01-modules-first.md  02-conda-environment.md  03-containers-follow-up.md  MAINTAINER.md  README.md  __init__.py  environment.yml  installing_software.markdown  maintainer.sh
src/section_05_installing_software/: 04-compiler-modules-stretch.md  README.md
src/section_05_python_array_jobs_parallelism_strategies/: 01-mpi-parallelism-stretch.md  02-monte-carlo-pi-parallel-strategies.md  MAINTAINER.md  README.md  __init__.py  hybrid-MPI.md  monte_carlo_pi_mpi_hybrid.py  monte_carlo_pi_numba.py  monte_carlo_pi_numba_parallel.py  monte_carlo_pi_numpy.py  monte_carlo_pi_parallel_strategies.py  monte_carlo_pi_pure_python.py  mpi_osu.sh  parallel_strategies.markdown
src/section_05_python_array_jobs_parallelism_strategies/ex01_monte_carlo_pi/: monte_carlo_pi_common.py  monte_carlo_pi_mpi_hybrid.py  monte_carlo_pi_numba.py  monte_carlo_pi_numba_parallel.py  monte_carlo_pi_numpy.py  monte_carlo_pi_parallel_strategies.py  monte_carlo_pi_pure_python.py  sbatch_monte_carlo_pi_mpi_hybrid.sh  sbatch_monte_carlo_pi_mpi_hybrid_multinode.sh  sbatch_monte_carlo_pi_single.sh
src/section_05_python_array_jobs_parallelism_strategies/ex02_monte_carlo_pi_c/: 02-monte-carlo-pi-c.md  sbatch_monte_carlo_pi_mpi_hybrid_c.sh  sbatch_monte_carlo_pi_mpi_hybrid_c_multinode.sh
src/section_05_python_array_jobs_parallelism_strategies/ex03_job_array/: 03-job-array.md  reduce_results.py  sbatch_monte_carlo_pi_array.sh
src/section_05_python_array_jobs_parallelism_strategies/ex04_gnu_parallel/: .gitignore  04-gnu-parallel.md  __init__.py  generate_tasks.py  run_gnu_parallel_pipeline.sh  sbatch_gnu_parallel.sh  sbatch_post_gnu_parallel.sh  sbatch_pre_gnu_parallel.sh
src/section_05_python_array_jobs_parallelism_strategies/ex05_mpi4py_futures/: 05-mpi4py-futures.md  monte_carlo_pi_mpi4py_futures.py  sbatch_mpi4py_futures.sh
src/section_05_python_array_jobs_parallelism_strategies/ex06_multiprocessing/: 06-multiprocessing.md  monte_carlo_pi_multiprocessing.py  sbatch_multiprocessing.sh
src/section_05_python_array_jobs_parallelism_strategies/monte_carlo_pi_c/: .gitignore  makefile  monte_carlo_pi_mpi_hybrid.c  monte_carlo_pi_mpi_hybrid_c.md  rng.c  rng.h  sbatch_monte_carlo_pi_mpi_hybrid_c.sh
src/section_06_debugging_failed_jobs/: README.md  debugging_failed_jobs.markdown
src/section_06_debugging_failed_jobs/ex01_oversubscription/: 01-oversubscription.md  sbatch_oversubscription.sh
src/section_06_debugging_failed_jobs/ex02_wrong_env_module/: 02-wrong-env-module.md  sbatch_wrong_env_module.sh
src/section_06_debugging_failed_jobs/ex03_wrong_env_pixi_missing/: 03-wrong-env-pixi-missing.md  sbatch_wrong_env_pixi_missing.sh
src/section_06_debugging_failed_jobs/ex04_wrong_env_pixi_wrong/: 04-wrong-env-pixi-wrong.md
src/section_06_debugging_failed_jobs/ex05_oom_matmul/: 05-oom-matmul.md  sbatch_oom_matmul.sh
src/section_06_debugging_failed_jobs/ex06_mpi_topology/: 06-mpi-topology.md  sbatch_mpi_topology.sh
src/section_06_debugging_failed_jobs/ex07_race_condition/: .gitignore  07-race-condition.md  makefile  race_condition.c  race_condition_numba.py  sbatch_race_condition.sh  sbatch_race_condition_numba.sh
src/section_06_python_array_jobs_parallelism_strategies/: 01-mpi-parallelism-stretch.md  02-monte-carlo-pi-parallel-strategies.md  README.md  monte_carlo_pi_common.py
src/section_07_tips/: README.md  __init__.py  tips_help_wrap_up.markdown
(+1 files in other folders)
