[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=69", "wheel"]

[project]
name = "isambard3-workshop"
version = "0.1.0"
description = "Workshop materials and example scripts for the GW4 Isambard 3 practical workshop."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy>=2,<3",
    "numba>=0.61,<0.62",
    "mpi4py>=4,<5",
    "jupytext>=1.18.1,<2",
]

[project.scripts]
monte-carlo-pi-pure-python = "section_05_python_array_jobs_parallelism_strategies.monte_carlo_pi_pure_python:main"
monte-carlo-pi-numpy = "section_05_python_array_jobs_parallelism_strategies.monte_carlo_pi_numpy:main"
monte-carlo-pi-numba = "section_05_python_array_jobs_parallelism_strategies.monte_carlo_pi_numba:main"
monte-carlo-pi-numba-parallel = "section_05_python_array_jobs_parallelism_strategies.monte_carlo_pi_numba_parallel:main"
monte-carlo-pi-mpi-hybrid = "section_05_python_array_jobs_parallelism_strategies.monte_carlo_pi_mpi_hybrid:main"
monte-carlo-pi-summary = "section_05_python_array_jobs_parallelism_strategies.monte_carlo_pi_parallel_strategies:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"section_01_welcome_login_overview" = ["*.md"]
"section_02_login_checkpoint_first_commands" = ["*.md"]
"section_03_first_batch_job_slurm" = ["*.md", "*.sh"]
"section_04_installing_software" = ["*.md", "*.py", "*.sh", "*.yml"]
"section_05_python_array_jobs_parallelism_strategies" = ["*.md", "*.py", "*.sh"]

[tool.pixi.workspace]
authors = ["Kolen Cheung <christian.kolen@gmail.com>"]
channels = ["conda-forge"]
platforms = ["linux-64", "linux-aarch64", "osx-64", "osx-arm64", "win-64"]

[tool.pixi.activation.env]
PRESENTATION_PORT = "8001"

[tool.pixi.tasks]
sync = { cmd = "jupytext --sync '**/*.ipynb' '**/*.py'", description = "Synchronize ipynb,py pairs using jupytext" }
monte-carlo-pi-summary = { cmd = "python -m section_05_python_array_jobs_parallelism_strategies.monte_carlo_pi_parallel_strategies", cwd = ".", description = "Run the Monte Carlo Pi pipelines." }
docs = { cmd = "cd src; make all", description = "Make HTMLs." }
serve = { cmd = "python -m http.server $PRESENTATION_PORT --bind 127.0.0.1 --directory src", description = "Serve the presentation.", depends-on = ["docs"] }
linkcheck-local = { cmd = "lychee http://127.0.0.1:$PRESENTATION_PORT", description = "Check the local presentation with lychee." }
linkcheck-live = { cmd = "lychee https://uniexeterrse.github.io/gw4-isambard-3-practical-workshop-2026/", description = "Check the live presentation with lychee." }
format = { depends-on = ["format-c", "format-markdown", "format-md", "format-py", "format-sh", "export-conda-env"], description = "Run all formatters and auto-generation scripts." }
format-c = { cmd = "bash bin/c_formatter.sh", description = "Format C files using clang-format." }
format-markdown = { cmd = "python bin/md_formatter.py '**/*.markdown' -t markdown", description = "Format .markdown files via pandoc." }
format-md = { cmd = "python bin/md_formatter.py '**/*.md' -t gfm", description = "Format .md files via pandoc (GFM)." }
format-py = { cmd = "ruff check --fix src/ bin/ && ruff format src/ bin/", description = "Lint-fix and format .py and .ipynb files with ruff." }
format-sh = { cmd = "bash bin/sh_formatter.sh", description = "Format .sh files using sed and shfmt." }
export-conda-env = { cmd = "pixi workspace export conda-environment --platform linux-aarch64 environment.yml && python bin/fix_conda_env.py environment.yml", description = "Export the pixi environment to a conda-compatible environment.yml, stripping duplicate pip entries." }

[tool.pixi.dependencies]
python = ">=3.12,<3.13"
numpy = ">=2,<3"
numba = ">=0.61,<0.62"
mpi4py = ">=4,<5"
jupytext = ">=1.18.1,<2"
make = ">=4.4.1,<5"
pandoc = ">=3.9,<4"
qrcode = ">=8.2,<9"
pillow = ">=12.1.1,<13"
ruff = ">=0.11,<1"
go-shfmt = ">=3.12,<4"
lychee = ">=0.23.0,<0.24"
clang-format = ">=22.1.3,<23"

[tool.pixi.pypi-dependencies]
isambard3-workshop = { path = ".", editable = true }

[tool.ruff]
line-length = 120
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = ["I", "F401", "F841", "F601", "F602", "F405"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.jupytext]
formats = "ipynb,py:percent"
