[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=69", "wheel"]

[project]
name = "isambard3-workshop"
version = "0.1.0"
description = "Workshop materials and example scripts for the GW4 Isambard 3 practical workshop."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy>=2.4,<3",
    "numba>=0.65,<1",
    "mpi4py>=4.1,<5",
]

[project.scripts]
monte-carlo-pi-pure-python = "section_05_python_array_jobs_parallelism_strategies.ex01_monte_carlo_pi.monte_carlo_pi_pure_python:main"
monte-carlo-pi-numpy = "section_05_python_array_jobs_parallelism_strategies.ex01_monte_carlo_pi.monte_carlo_pi_numpy:main"
monte-carlo-pi-numba = "section_05_python_array_jobs_parallelism_strategies.ex01_monte_carlo_pi.monte_carlo_pi_numba:main"
monte-carlo-pi-numba-chunked = "section_05_python_array_jobs_parallelism_strategies.ex01_monte_carlo_pi.monte_carlo_pi_numba_chunked:main"
monte-carlo-pi-numba-parallel = "section_05_python_array_jobs_parallelism_strategies.ex01_monte_carlo_pi.monte_carlo_pi_numba_parallel:main"
monte-carlo-pi-mpi-hybrid = "section_05_python_array_jobs_parallelism_strategies.ex01_monte_carlo_pi.monte_carlo_pi_mpi_hybrid:main"
monte-carlo-pi-summary = "section_05_python_array_jobs_parallelism_strategies.ex01_monte_carlo_pi.monte_carlo_pi_parallel_strategies:main"
reduce-mc-pi-results = "section_05_python_array_jobs_parallelism_strategies.ex03_job_array.reduce_results:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"section_01_welcome_login_overview" = ["*.md"]
"section_02_login_checkpoint_first_commands" = ["*.md"]
"section_03_first_batch_job_slurm" = ["*.md", "*.sh"]
"section_04_installing_software" = ["*.md", "*.py", "*.sh", "*.yml"]
"section_05_python_array_jobs_parallelism_strategies" = ["*.md"]
"section_05_python_array_jobs_parallelism_strategies.ex01_monte_carlo_pi" = ["*.md", "*.sh"]
"section_05_python_array_jobs_parallelism_strategies.ex02_monte_carlo_pi_c" = ["*.md", "*.c", "*.h", "*.sh"]
"section_05_python_array_jobs_parallelism_strategies.ex03_job_array" = ["*.md", "*.sh"]
"section_05_python_array_jobs_parallelism_strategies.ex04_gnu_parallel" = ["*.md", "*.sh"]
"section_05_python_array_jobs_parallelism_strategies.ex05_mpi4py_futures" = ["*.md", "*.sh"]
"section_05_python_array_jobs_parallelism_strategies.ex06_multiprocessing" = ["*.md", "*.sh"]
"section_06_debugging_failed_jobs" = ["*.md", "*.sh"]
"section_06_debugging_failed_jobs.ex01_oversubscription" = ["*.md", "*.sh"]
"section_06_debugging_failed_jobs.ex02_wrong_env_module" = ["*.md", "*.sh"]
"section_06_debugging_failed_jobs.ex03_wrong_env_pixi_missing" = ["*.md", "*.sh"]
"section_06_debugging_failed_jobs.ex04_wrong_env_pixi_wrong" = ["*.md", "*.sh"]
"section_06_debugging_failed_jobs.ex05_oom_matmul" = ["*.md", "*.sh"]
"section_06_debugging_failed_jobs.ex06_mpi_topology" = ["*.md", "*.sh"]
"section_06_debugging_failed_jobs.ex07_race_condition" = ["*.md", "*.sh", "*.c", "*.h"]

[tool.pixi.workspace]
authors = ["Kolen Cheung <christian.kolen@gmail.com>"]
channels = ["conda-forge/label/mpi-external", "conda-forge"]
platforms = ["linux-64", "linux-aarch64", "osx-64", "osx-arm64", "win-64"]

[tool.pixi.activation.env]
PRESENTATION_PORT = "8001"

[tool.pixi.tasks]
sync = { cmd = "jupytext --sync '**/*.ipynb' '**/*.py'", description = "Synchronize ipynb,py pairs using jupytext" }
monte-carlo-pi-summary = { cmd = "python -m section_05_python_array_jobs_parallelism_strategies.ex01_monte_carlo_pi.monte_carlo_pi_parallel_strategies", cwd = ".", description = "Run the Monte Carlo Pi pipelines." }
docs = { cmd = "cd src; make all", description = "Make HTMLs." }
serve = { cmd = "python -m http.server $PRESENTATION_PORT --bind 127.0.0.1 --directory src", description = "Serve the presentation.", depends-on = ["docs"] }
linkcheck-local = { cmd = "lychee http://127.0.0.1:$PRESENTATION_PORT", description = "Check the local presentation with lychee." }
linkcheck-live = { cmd = "lychee https://uniexeterrse.github.io/gw4-isambard-3-practical-workshop/", description = "Check the live presentation with lychee." }
format = { depends-on = ["format-c", "format-markdown", "format-md", "format-py", "format-sh", "generate"], description = "Run all formatters and auto-generation scripts." }
format-c = { cmd = "bash bin/c_formatter.sh bin bootstrap src", description = "Format C files using clang-format." }
format-markdown = { cmd = "python bin/md_formatter.py '**/*.markdown' -t markdown", description = "Format .markdown files via pandoc." }
format-md = { cmd = "python bin/md_formatter.py '**/*.md' -t gfm", description = "Format .md files via pandoc (GFM)." }
format-py = { cmd = "ruff check --fix bin bootstrap src && ruff format bin bootstrap src", description = "Lint-fix and format .py and .ipynb files with ruff." }
format-sh = { cmd = "bash bin/sh_formatter.sh bin bootstrap src", description = "Format .sh files using sed and shfmt." }
generate = { depends-on = ["generate-conda-env", "generate-bashrc"], description = "Run all auto-generation scripts." }
generate-conda-env = { cmd = "pixi workspace export conda-environment --environment default --platform linux-aarch64 environment.yml && python bin/fix_conda_env.py environment.yml && pixi workspace export conda-environment --environment hpc --platform linux-aarch64 environment_hpc.yml && python bin/fix_conda_env.py environment_hpc.yml", description = "Export both pixi environments to conda-compatible environment.yml / environment_hpc.yml, stripping duplicate pip entries." }
generate-bashrc = { cmd = "cd bootstrap/dotfiles && make", description = "Generate .bashrc" }

[tool.pixi.dependencies]
python = ">=3.12,<3.13"
numpy = ">=2.4.3,<3"
numba = ">=0.65.0,<0.66"
mpi4py = ">=4.1.1,<5"
jupytext = ">=1.19.1,<2"
make = ">=4.4.1,<5"
pandoc = ">=3.9.0.2,<4"
qrcode = ">=8.2,<9"
pillow = ">=12.2.0,<13"
ruff = ">=0.15.11,<0.16"
go-shfmt = ">=3.13.1,<4"
lychee = ">=0.23.0,<0.24"
clang-format = ">=22.1.3,<23"
parallel = ">=20200322,<20260123"

[tool.pixi.pypi-dependencies]
isambard3-workshop = { path = ".", editable = true }

# hpc environment: swap conda-forge OpenMPI for the dummy mpich package so that
# mpi4py picks its MPICH-linked build, which is then satisfied at runtime by
# Cray MPICH via LD_LIBRARY_PATH (see sbatch_monte_carlo_pi_mpi_hybrid.sh).
# Only on Unix — no Cray MPICH on Windows.
[tool.pixi.feature.hpc.target.linux-64.dependencies]
mpich = { version = ">=4.3.2,<5", build = "external_*" }
[tool.pixi.feature.hpc.target.linux-aarch64.dependencies]
mpich = { version = ">=4.3.2,<5", build = "external_*" }

[tool.pixi.environments]
default = { features = ["default"], solve-group = "default" }
hpc = { features = ["default", "hpc"], solve-group = "hpc" }

[tool.ruff]
line-length = 120
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = ["I", "F401", "F841", "F601", "F602", "F405"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.jupytext]
formats = "ipynb,py:percent"
